# json_rs

./: .gitignore  README.md  bench.exs  mix.exs
.circleci/: config.yml
lib/: json_rs.ex
native/json_rs/: Cargo.toml
native/json_rs/src/: lib.rs
test/: json_rs_test.exs
