[package]
name = "json_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "json_rs"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = "1"
serde_json = "1"
rustler = "0.22"

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
